--- a/tutorial/.vscode/settings.json
+++ b/tutorial/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/youngjin/anaconda3/envs/django/bin/python"
+    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\envs\\django\\python.exe"
 }
